# notes-api

./: Cargo.toml  docker-compose.yml
.sqlx/: query-0baaaf7225241720fb9f09d06d63cc20065d01b4dcf46d222a7fe3ee4acc0aba.json  query-527ceceda8915f6c38198f51d3921d5517635c47059333e948c4d58ec9249603.json  query-fb12578b20af49b87116ce9e60bdf1e44282cdf0ffee0fad26523270903fca67.json
migrations/: 0001_create_notes.sql
src/: config.rs  db.rs  db_setup.rs  error.rs  main.rs  middlewares.rs  tracing.rs  types.rs
src/notes/: model.rs  routes.rs  service.rs
