[package]
name = "notes-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }
actix-cors = "0.7.1"
futures-util = "0.3.31"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
    "chrono"
] }
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
